# devsync-hub

./: .env.example  .gitignore  CLAUDE.md  README.md  devsync-export-2026-02-08.json  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml  version-bump.yml
backend/: .dockerignore  Dockerfile  pom.xml
docs/: api.md
docs/plans/: 2026-01-22-gitlab-branch-dropdown.md  2026-01-22-minimalist-modern-frontend.md  2026-01-22-report-template-strict.md  2026-01-25-inline-edit-reports-sql.md  2026-01-25-report-calendar-redesign.md  2026-01-25-sql-multi-env-execution.md  2026-01-25-sql-project-detail-sheet.md  2026-02-05-requirement-manual-entry.md  2026-02-25-auto-update-badge.md  2026-02-25-github-icon-restart.md  2026-02-25-iteration-layout-refactor.md
docs/sql/: 2026-01-25-sql-multi-env-migration.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
nginx/: nginx.conf
scripts/: bump-version.mjs  export-pg-data.js  inject-updater-pubkey.mjs
src/: App.tsx  CLAUDE.md  main.tsx
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/axum_gateway/: mod.rs  routes.rs  sse.rs
src-tauri/src/clients/: deepseek_client.rs  gitlab_client.rs  mod.rs
src-tauri/src/commands/: dashboard_cmd.rs  iteration_cmd.rs  migration_cmd.rs  mod.rs  project_cmd.rs  report_cmd.rs  requirement_cmd.rs  setting_cmd.rs  sql_cmd.rs
src-tauri/src/db/: migration.rs  mod.rs  schema.rs
src-tauri/src/models/: api_key.rs  common.rs  git_commit.rs  iteration.rs  mod.rs  pending_sql.rs  project.rs  report.rs  requirement.rs  system_setting.rs
src-tauri/src/services/: dashboard_service.rs  iteration_service.rs  mod.rs  project_service.rs  report_service.rs  requirement_service.rs  setting_service.rs  sql_service.rs
src/api/: dashboard.ts  index.ts  iteration.ts  project.ts  report.ts  requirement.ts  setting.ts  sql.ts
src/components/: ErrorBoundary.tsx  Layout.tsx  hero-graphic.tsx
src/constants/: status.ts
src/hooks/: useConfirmDialog.ts  useSSE.ts  useUnsavedWarning.ts
src/lib/: consoleCapture.ts  environmentOptions.ts  updater.ts
src/pages/: Console.test.tsx  Console.tsx  (+6 more)
(+177 files in other folders)
