[package]
name = "devsync-hub"
version = "2.0.13"
description = "DevSync Hub - 跨平台项目进度管理桌面客户端"
authors = ["rockcoder"]
edition = "2021"
default-run = "devsync-hub"

[lib]
name = "devsync_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"










